Cambio de descripcion

--- a/CentroLuant/Views/Home/Index.cshtml
+++ b/CentroLuant/Views/Home/Index.cshtml
@@ -172,7 +172,7 @@
                     <div>
                         <div class="module-title">Gestión de facturas</div>
                         <div class="module-text">
-                            Modificar descripción.
+                            Gestión y control de las facturas registradas en la clínica.
                         </div>
                     </div>
                 </div>
